# AURA

./: .env.example  .gitignore  COMPLIANCE_ARCHITECTURE_SUMMARY.md  CORPUS_ENHANCEMENT.md  Cargo.toml  DEMO_RESULTS_COMPLETE.md  Dockerfile  Dockerfile.dev  FINAL_IMPROVEMENTS_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  MANIFEST.in  Makefile  NETWORK_EFFECTS_STRATEGY.md  NETWORK_VIABILITY_RESULTS.md  PACKAGES_IMPLEMENTATION_COMPLETE.md  PACKAGES_SUMMARY.md  PATENT_COMPLIANCE_CLAIMS_ADDED.md  PATENT_FILED.md  PATENT_STRATEGIC_ADVANTAGE.md  PUBLISHING_GUIDE.md  README.md  REALISTIC_ASSESSMENT.md  REPOSITORY_ORGANIZATION_COMPLETE.md  REPOSITORY_ORGANIZATION_PLAN.md  ROOT_README.md  SDK_UPDATE_COMPLETE.md  START_HERE.md  TEMPLATE_SELECTION_BIAS_FEATURE.md  benchmark.py  binding.gyp  complete_metadata_results.json  docker-compose.dev.yml  docker-compose.yml  docker.txt  enhanced_corpus_results.json  extended_metadata_results.json  install.txt  metrics_20251023_155219.json  package.json  production_hybrid_compression.py  (+7 more)
01-PATENT/: README.md
02-BUSINESS/: README.md
04-PACKAGES/: README.md
05-CORE/: README.md
06-DEMOS/: README.md
08-BENCHMARKS/: README.md
09-CONFIG/: README.md
10-ARCHIVE/: README.md
AURA-main/: .dockerignore  =10.0  COMPREHENSIVE_METRICS_REPORT.txt  Cargo.toml  LICENSE  PACKAGE_README.md  STRESS_TEST_RESULTS.txt  package-lock.json  package.json  performance.txt  production_websocket_server.py  pyproject.toml  quickstart.txt  requirements.txt  setup.py  test_results.json  tsconfig.json  usage.txt
AURA-main/aura_compression/: acceleration.py  appendix_c_templates.py  background_workers.py  conversation_accelerator.py  discovery.py  router.py  separated_audit.py
AURA-main/aura_compression/auralite/: __init__.py  decoder.py  encoder.py
AURA-main/aura_compression/brio/: __init__.py  decoder.py  encoder.py
AURA-main/aura_compression/brio_full/: trie.py
AURA-main/config/: emergency_config.py
AURA-main/docs/: EMERGENCY_FIX_SUMMARY.md  OPTIMIZATION_RECOMMENDATIONS.md  STACK_TUNING_PLAN.md  TECHNICAL_REFERENCE.md  WEEK1_DEPLOYMENT_RESULTS.md
AURA-main/docs/business/patent/: ABST_Abstract.txt  OFFICE_ACTION_RESPONSE_TEMPLATE.txt  SPEC_Background_of_Invention.txt  SPEC_Detailed_Description.txt  SPEC_Title_of_Invention.txt  TR.PROV_Provisional_Cover_Sheet.txt
AURA-main/examples/: test_template_patterns.py
AURA-main/improved_test_traces/: user_3_traces.jsonl  user_5_traces.jsonl
AURA-main/scripts/: benchmark_optimizations.py
AURA-main/src/: brio.rs  client_sdk.rs  compressor.rs  index.ts  lib.rs  metadata.rs
AURA-main/test_traces/: user_1_traces.jsonl  user_2_traces.jsonl  user_4_traces.jsonl  user_5_traces.jsonl
AURA-main/tests/: metrics_collector.py  run_stress_test.sh  simple_websocket_server.py  stress_test_10_users.py  stress_test_50_users.py  structured_corpus_realistic.jsonl  test_real_world_scenario.py  test_real_world_scenarios.py  test_streaming_integration.py
AURA-main/tmp_audit_logs/: client_delivered.jsonl  metadata_only.jsonl
appendix/: APPENDIX_A_SOURCE_CODE.md  APPENDIX_B_BENCHMARK_DATA.md  APPENDIX_C_TEMPLATE_LIBRARY.md  PATENT_FILING_CHECKLIST.md
aura_compression/: __init__.py  audit.py  compressor.py  function_parser.py  metadata.py  metadata_entry.py  metadata_processor.py  metadata_sidechannel.py  normalizer.py  streaming_harness.py  template_discovery.py  templates.py
benchmarks/: baseline_quick.json  benchmark_suite.py
config/: ai_streaming.json  batch_processing.json  code_compression.json  realtime_chat.json
demos/: README.md  demo_adaptive_acceleration.py  demo_ai_to_ai.py  demo_metadata_fastpath.py  demo_network_simulation.py  demo_realworld_scenario.py  demo_template_discovery.py  demo_websocket_network_test.py
docs/: AUTOMATIC_TEMPLATE_DISCOVERY.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  EXPERIMENTAL_BRIO.md  TECHNICAL_REFERENCE.md  TEST_RESULTS.md
examples/: complete_system_demo.py  test.aura  websocket_client.py
improved_test_traces/: user_10_traces.jsonl  user_1_traces.jsonl  (+6 more)
(+137 files in other folders)
