[package]
name = "aura-compression"
version = "1.0.0"
authors = ["Todd Hendricks <todd@auraprotocol.org>"]
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
description = "AI-Optimized Hybrid Compression Protocol for Real-Time Communication"
documentation = "https://docs.rs/aura-compression"
homepage = "https://github.com/yourusername/aura-compression"
repository = "https://github.com/yourusername/aura-compression"
keywords = ["compression", "ai", "chat", "websocket", "auralite"]
categories = ["compression", "network-programming", "web-programming"]
readme = "README.md"

[lib]
name = "aura_compression"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "aura-compress"
path = "src/bin/compress.rs"

[[bin]]
name = "aura-decompress"
path = "src/bin/decompress.rs"

[[bin]]
name = "aura-server"
path = "src/bin/server.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"

# Optional WebSocket support
tokio = { version = "1.35", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
futures-util = { version = "0.3", optional = true }

# Optional CLI support
clap = { version = "4.4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }

# FFI bindings
neon = { version = "1.0", optional = true, default-features = false, features = ["napi-6"] }
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[features]
default = []
websocket = ["tokio", "tokio-tungstenite", "futures-util"]
cli = ["clap", "env_logger"]
neon-bindings = ["neon"]
python-bindings = ["pyo3"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[[bench]]
name = "compression"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
